Fix date picker and error message overlap

--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,11 @@ a:hover {
   color: white;
   position: absolute;
   padding: .25em;
+  z-index: 2;
+}
+
+.react-datepicker-popper {
+  z-index: 10;
 }
 
 #footer {
